  18 May 2014; Michael Weber <xmw@gentoo.org> pycharm-community-3.1.3.ebuild:
  update DESCRIPTION

*pycharm-community-3.1.3 (06 May 2014)

  06 May 2014; Michael Weber <xmw@gentoo.org> +files/README.gentoo,
  +metadata.xml, +pycharm-community-3.1.3.ebuild:
  Initial import (bug 369375)