@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST pycharm-community-3.1.3.tar.gz 108486068 SHA256 f671ee4c99207c179f168b5b98fa23afe90a94c3a3914367b95a46b0c2881b23 SHA512 d5f1bc6f1f74b9ec3c053353f1cae83d97f0ed5faa0534ffec1b69acd81c683d1bc9353d361059700544cf88f0cac40bff68a231868f6ce454a810964e9154cc WHIRLPOOL dd71b36ae47b392f92ddfb05f3e5983a6415505879a7682d300f3930ab470062d3a17453e81fbddcfbd7098377ddb19b26b381a72d70c5e97a7bbad1d44f9037
+DIST pycharm-community-3.4.tar.gz 112814458 SHA256 e63417302c4342fef07e90877beff7d770525ef34150d58585e69c5518b291ab SHA512 c8b4c862157e5fde8557824d0ab4e5e21ffe1066ea05af5853d2976af4ddeb426576dc98ea464eb7d2fc2b2ca862954f427275824cd1cf0205f8a5a688e4f7c7 WHIRLPOOL 1ecdb97c3767d1a24daf13000ed6d8ac9b878e80dee4aa227a5ed03426dbc39660ce221046d9279abea7aa0703db78ae3161f97557d97af3178d722a7f5766a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNo3OUACgkQknrdDGLu8JAQuwEAhdAEkuspM10lsalJgtz7Fotk
-/njgyfREhVcbWDZ2Wy8A/3NFA2RGXtpV48N08MaRNOBOiTtuJfx+UPdanAEdCyJ0
-=1ny9
+iF4EAREIAAYFAlOLrUAACgkQknrdDGLu8JCbhgEAgbhXl/1rNr8hpcQKVOYCWcyX
+tvmcVccC6Xe9zb3GqNEA/3GoHbQKMLFeai0QVdLWXG12B6rzRvqaHCHsLKJEwVix
+=sTVf
 -----END PGP SIGNATURE-----
