@@ -1,3 +1,8 @@
+*pycharm-community-3.4 (01 Jun 2014)
+
+  01 Jun 2014; Michael Weber <xmw@gentoo.org> +pycharm-community-3.4.ebuild:
+  Version bump
+
   18 May 2014; Michael Weber <xmw@gentoo.org> pycharm-community-3.1.3.ebuild:
   update DESCRIPTION
 
